agregue la cabezera en el body

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Trabajo Final M.E.A</title>
 </head>
 <body>
+    <header>
+        
+    </header>
     <h2>Contrucciones en Secocamcam</h2>
 </body>
 </html>
