Creación de la cabecera y algunos Div en el Body

--- a/index.html
+++ b/index.html
@@ -8,8 +8,24 @@
 </head>
 <body>
     <header>
-        
+        <h1>Empresa de Contruciones</h1>
+        <h4>Somos la Empresa mas Grande del Noa Brindamos Servicios de Alta calidad</h4>
+        <p>Buscamos la mejora Continua e innovamos en Tecnologia aplicada a la contrucción</p>
     </header>
-    <h2>Contrucciones en Secocamcam</h2>
+    <div>
+        <div>
+            <div>Contrucciones de Puentes</div>
+            <div>Contrucciones de Caminos</div>
+        </div>
+        <div>
+            <div>contrucciones de Edificios</div>
+            <div>Obras Publicas</div>
+            <div>contrucciones de Viviendas</div>
+        </div>
+        <div>
+            <div>Nivelacion de Suelos</div>
+            <div>Alquiler de Maquinarias</div>
+        </div>
+    </div>
 </body>
 </html>
