--- a/index.html
+++ b/index.html
@@ -4,27 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>Trabajo Final M.E.A</title>
 </head>
 <body>
-    <header>
-        <h1>Empresa de Contruciones</h1>
-        <h4>Somos la Empresa mas Grande del Noa Brindamos Servicios de Alta calidad</h4>
-        <p>Buscamos la mejora Continua e innovamos en Tecnologia aplicada a la contrucción</p>
-    </header>
-    <div>
-        <div>
-            <div>Contrucciones de Puentes</div>
-            <div>Contrucciones de Caminos</div>
+    <div class="container">
+        <header class="row">
+            <h1>Empresa de Construcciones</h1>
+            <h4>Somos la Empresa mas Grande del Noa Brindamos Servicios de Alta calidad</h4>
+            <p>Buscamos la mejora Continua e innovamos en Tecnologia aplicada a la contrucción</p>
+        </header>
+    
+        <div class="row my-1">
+            <div class="col-sm-6 col-lg-8 bg-black text-white py-3 px-2">
+                <h4>Construcciones de Puentes</h4>
+            <img src="./images/foto01.jpg" alt="">                
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, dolores. Vero, veniam quidem vel animi repudiandae aperiam iure autem dignissimos id voluptates at aspernatur quo iusto delectus nemo cumque debitis.</p>
+            </div>
+            <div class="col-sm-6 col-lg-4 bg-black text-white">
+                <h4>Construcciones de Caminos</h4>
+            <img src="./images/foto01.jpg" alt="">                
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, dolores. Vero, veniam quidem vel animi repudiandae aperiam iure autem dignissimos id voluptates at aspernatur quo iusto delectus nemo cumque debitis.</p>
+            </div>
         </div>
-        <div>
-            <div>contrucciones de Edificios</div>
-            <div>Obras Publicas</div>
-            <div>contrucciones de Viviendas</div>
+        <div class="row my-1">
+            <div class="col-sm-6 col-lg-4 bg-primary py-3 px-2">
+                <h4>Construcciones de Edificios</h4>
+            <img src="./images/foto01.jpg" alt="">                
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, dolores. Vero, veniam quidem vel animi repudiandae aperiam iure autem dignissimos id voluptates at aspernatur quo iusto delectus nemo cumque debitis.</p>
+            </div>
+            <div class="col-sm-6 col-lg-4 bg-primary py-3 px-2">
+                <h4>Obras Publicas</h4>
+            <img src="./images/foto01.jpg" alt="">                
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, dolores. Vero, veniam quidem vel animi repudiandae aperiam iure autem dignissimos id voluptates at aspernatur quo iusto delectus nemo cumque debitis.</p>
+            </div>
+            <div class="col-sm-6 col-lg-4 bg-primary py-3 px-2">
+                <h4>Construcciones de Viviendas</h4>
+            <img src="./images/foto01.jpg" alt="">                
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, dolores. Vero, veniam quidem vel animi repudiandae aperiam iure autem dignissimos id voluptates at aspernatur quo iusto delectus nemo cumque debitis.</p>
+            </div>
         </div>
-        <div>
-            <div>Nivelacion de Suelos</div>
-            <div>Alquiler de Maquinarias</div>
+        <div class="row my-1">
+            <div class="col-sm-6 col-lg-6 bg-secondary py-3 px-2">
+                <h4>Nivelacion de Suelos</h4>
+            <img src="./images/foto01.jpg" alt="">                
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, dolores. Vero, veniam quidem vel animi repudiandae aperiam iure autem dignissimos id voluptates at aspernatur quo iusto delectus nemo cumque debitis.</p>
+            </div>
+            <div class="col-sm-6 col-lg-6 bg-secondary py-3 px-2">
+                <h4>Alquiler de Maquinarias</h4>
+            <img src="./images/foto01.jpg" alt="">                
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, dolores. Vero, veniam quidem vel animi repudiandae aperiam iure autem dignissimos id voluptates at aspernatur quo iusto delectus nemo cumque debitis.</p>
+            </div>
         </div>
     </div>
 </body>
