se modifico el parrafo del Header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header class="row">
             <h1>Empresa de Construcciones</h1>
             <h4>Somos la Empresa mas Grande del Noa Brindamos Servicios de Alta calidad</h4>
-            <p>Buscamos la mejora Continua e innovamos en Tecnologia aplicada a la contrucción</p>
+            <p>Buscamos la mejora Continua e innovamos en Tecnologia aplicada a la contrucción. Las obras se entregan en tiempo y forma</p>
         </header>
     
         <div class="row my-1">
