--- a/index.html
+++ b/index.html
@@ -5,57 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <title>Trabajo Final M.E.A</title>
+    <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <header class="row">
-            <h1>Empresa de Construcciones</h1>
-            <h4>Somos la Empresa mas Grande del Noa Brindamos Servicios de Alta calidad</h4>
-            <p>Buscamos la mejora Continua e innovamos en Tecnologia aplicada a la contrucción. Las obras se entregan en tiempo y forma</p>
-        </header>
-    
-        <div class="row my-1">
-            <div class="col-sm-6 col-lg-8 bg-black text-white py-3 px-4">
-                <h4>Construcciones de Puentes</h4>
-                <img class="float-end" src="./images/foto01.png" alt="">                
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, dolores. Vero, veniam quidem vel animi repudiandae aperiam iure autem dignissimos id voluptates at aspernatur quo iusto delectus nemo cumque debitis.</p>
-            </div>
-            <div class="col-sm-6 col-lg-4 bg-black text-white">
-                <h4>Construcciones de Caminos</h4>
-                <img class="float-end" src="./images/foto02.png" alt="">                
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, dolores. Vero, veniam quidem vel animi repudiandae aperiam iure autem dignissimos id voluptates at aspernatur quo iusto delectus nemo cumque debitis.</p>
-            </div>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled">Disabled</a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <div class="row my-1">
-            <div class="col-sm-6 col-lg-4 bg-primary py-3 px-2">
-                <h4>Construcciones de Edificios</h4>
-                <img class="float-end" src="./images/foto03.png" alt="">                
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, dolores. Vero, veniam quidem vel animi repudiandae aperiam iure autem dignissimos id voluptates at aspernatur quo iusto delectus nemo cumque debitis.</p>
-            </div>
-            <div class="col-sm-6 col-lg-4 bg-primary py-3 px-2">
-                <h4>Obras Publicas</h4>
-                <img class="float-end" src="./images/foto04.png" alt="">                
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, dolores. Vero, veniam quidem vel animi repudiandae aperiam iure autem dignissimos id voluptates at aspernatur quo iusto delectus nemo cumque debitis.</p>
-            </div>
-            <div class="col-sm-6 col-lg-4 bg-primary py-3 px-2">
-                <h4>Construcciones de Viviendas</h4>
-                <img class="float-end" src="./images/foto05.png" alt="">                
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, dolores. Vero, veniam quidem vel animi repudiandae aperiam iure autem dignissimos id voluptates at aspernatur quo iusto delectus nemo cumque debitis.</p>
-            </div>
-        </div>
-        <div class="row my-1">
-            <div class="col-sm-6 col-lg-6 bg-secondary py-3 px-2">
-                <h4>Nivelacion de Suelos</h4>
-                <img class="float-end" src="./images/foto06.png" alt="">                
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, dolores. Vero, veniam quidem vel animi repudiandae aperiam iure autem dignissimos id voluptates at aspernatur quo iusto delectus nemo cumque debitis.</p>
-            </div>
-            <div class="col-sm-6 col-lg-6 bg-secondary py-3 px-2">
-                <h4>Alquiler de Maquinarias</h4>
-                <img class="float-end" src="./images/foto07.png" alt="">                
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, dolores. Vero, veniam quidem vel animi repudiandae aperiam iure autem dignissimos id voluptates at aspernatur quo iusto delectus nemo cumque debitis.</p>
-            </div>
-        </div>
-    </div>
+      </nav>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </html>
