--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
                 <a class="nav-link" href="#">Trabaja con Nosotros</a>
               </li>
             </ul>
-            <i scr="./logos/facebook.svg" class="fa-brands fa-facebook fa-lg"></i>
+            <i class="lab la-twitter"></i>
+            <i class="lab la-facebook"></i>
           </div>
         </div>
       </nav>
   </div>
+  <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
   <script src="https://kit.fontawesome.com/a46c2804cf.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
