--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    
+    <link rel="stylesheet" href="./estilos.css">
     <title>Document</title>
 </head>
 <body>
@@ -31,8 +31,10 @@
                 <a class="nav-link" href="#">Trabaja con Nosotros</a>
               </li>
             </ul>
-            <i class="lab la-twitter"></i>
-            <i class="lab la-facebook"></i>
+              <a href="#"><i class="lab la-twitter "></i></a>
+              <a href="#"><i class="lab la-facebook"></i></a>
+              <a href="#"><i class="lab la-youtube"></i></a>
+            
           </div>
         </div>
       </nav>
