Se agrego un slider

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <div class = "container">
+      <!-- NAVaBar -->    
       <nav class="navbar navbar-expand-sm bg-body-tertiary">
         <div class="container-fluid">
           <img src="./logos/construccionesNoa3.png" alt="Logo empresarial">
@@ -28,16 +29,69 @@
                 <a class="nav-link" href="#">Clientes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Trabaja con Nosotros</a>
+                <a class="nav-link" href="#">Servicios</a>
               </li>
             </ul>
+            <div class = "ms-sm-4 d-flex column-gap-2">
               <a href="#"><i class="lab la-twitter "></i></a>
               <a href="#"><i class="lab la-facebook"></i></a>
               <a href="#"><i class="lab la-youtube"></i></a>
-            
+            </div>
           </div>
         </div>
       </nav>
+      <!-- hERO SLIDER-->
+      <main class="hero">
+        <div id="carouselExampleCaptions" class="carousel slide">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="./images/slider1_50por.png" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Responsabilidad</h5>
+                <p>Some representative placeholder content for the first slide.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="./images/slider2_50por.png" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Esfuerzo</h5>
+                <p>Some representative placeholder content for the second slide.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="./images/slider3_50por.png" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Entregas en Tiempo</h5>
+                <p>Some representative placeholder content for the third slide.</p>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </main>
+      <div class="conteiner main-container">
+        <!-- Left Conteiner-->
+        <div clas="">
+
+        </div>
+        <!-- Rigth Container-->
+        <div clas="">
+
+        </div>
+        
+      </div>
   </div>
   <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
   <script src="https://kit.fontawesome.com/a46c2804cf.js" crossorigin="anonymous"></script>
