--- a/index.html
+++ b/index.html
@@ -53,21 +53,21 @@
               <img src="./images/slider1_50por.png" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Responsabilidad</h5>
-                <p>Some representative placeholder content for the first slide.</p>
+                <p class="textBanner">Some representative placeholder content for the first slide.</p>
               </div>
             </div>
             <div class="carousel-item">
               <img src="./images/slider2_50por.png" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Esfuerzo</h5>
-                <p>Some representative placeholder content for the second slide.</p>
+                <p class="textBanner">Some representative placeholder content for the second slide.</p>
               </div>
             </div>
             <div class="carousel-item">
               <img src="./images/slider3_50por.png" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Entregas en Tiempo</h5>
-                <p>Some representative placeholder content for the third slide.</p>
+                <p class="textBanner">Some representative placeholder content for the third slide.</p>
               </div>
             </div>
           </div>
@@ -84,7 +84,7 @@
       <div class="conteiner main-container">
         
         <div clas="row">
-          <h2 class="my-5 display-2">Contrucciones en Ejecucion</h2>
+          <h3 class="my-5 display-2">Contrucciones en Ejecucion</h3>
           <!-- Left Conteiner-->
           <div class="col-8 my-0">
             <h3>Circunvalación Oeste - Provincia de Salta</h3>
