--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./images/house-solid.svg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="./estilos.css">
+    
     <title>Document</title>
 </head>
 <body>
@@ -98,8 +100,6 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A voluptatum repellendus, ipsa, vero adipisci fuga quidem molestiae mollitia harum voluptatibus quia tempora natus minus at odio laboriosam. Asperiores, molestias blanditiis?</p>
 
           </div>
-
-
           <!-- Rigth Container-->
           <div class="col-4">
              
@@ -111,7 +111,7 @@
       </div>
   </div>
   <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
-  <script src="https://kit.fontawesome.com/a46c2804cf.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/f4977f9205.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 
